add short explanation about the game of 24.

--- a/notebooks/art_of_prompt_design/tree_of_thought.ipynb
+++ b/notebooks/art_of_prompt_design/tree_of_thought.ipynb
@@ -56,7 +56,9 @@
    "source": [
     "## Examples With Previous Prompting Patterns\n",
     "\n",
-    "For comparison, lets first see how some of the prompting patterns illustrated in the image above perform."
+    "For comparison, we'll first see how some of the prompting patterns illustrated in the image above perform.\n",
+    "\n",
+    "Lets use the [Game of 24](https://www.4nums.com/game/difficulties/) mathematical reasoning challenge as an example problem. The goal is to find a sequence of arithmetic operations that can be applied to a set of 4 numbers to get the number 24. For example, given input `4 9 10 13`, a solution output could be `(10 - 4) * (13 - 9) = 24`. This is a good problem to test the limits of the different prompting strategies because it requires non-trivial planning and search."
    ]
   },
   {
@@ -581,7 +583,7 @@
     "        # Use few-shot cot prompt to generate the answer\n",
     "        prompt = cot_prompt.format(input=x) + y + 'Answer: '\n",
     "        # Use the calculator tool to guarantee the result of the equation is correct\n",
-    "        lm = model + prompt + gen('answer', suffix='\\n', tools=[calculator_tool])\n",
+    "        lm = model + prompt + gen('answer', suffix='\\n', tools=[calculator_tool], max_tokens=40)\n",
     "        return [y + f'Answer: {lm[\"answer\"]}\\n']\n",
     "    else:\n",
     "        lm = model + propose_prompt.format(input=current_numbers)\n",
@@ -625,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
