Update notebook to match

--- a/notebooks/guaranteeing_valid_syntax.ipynb
+++ b/notebooks/guaranteeing_valid_syntax.ipynb
@@ -242,10 +242,10 @@
     }
    ],
    "source": [
-    "from guidance.library import json as gen_json\n",
+    "from guidance import json as gen_json\n",
     "\n",
     "generated = lm + \"A character attuned to the forest\"\n",
-    "generated += gen_json(json_schema=character_schema_obj, name=\"next_character\")"
+    "generated += gen_json(schema=character_schema_obj, name=\"next_character\")"
    ]
   },
   {
