Working on getting a couple of tests going

--- a/notebooks/tutorials/guidance_acceleration.ipynb
+++ b/notebooks/tutorials/guidance_acceleration.ipynb
@@ -72,7 +72,7 @@
    ],
    "source": [
     "model = 'mistralai/Mistral-7B-v0.1'\n",
-    "device = 'cuda'\n",
+    "device = 'cuda' if torch.cuda.is_available() else \"cpu\"\n",
     "llm_gpt2_large_gpu = guidance.models.Transformers(model, device=device) # run on an A100 for the numbers below"
    ]
   },
