Rethink notebook slightly

--- a/notebooks/api_examples/models/AzureOpenAI.ipynb
+++ b/notebooks/api_examples/models/AzureOpenAI.ipynb
@@ -20,7 +20,8 @@
    "source": [
     "import os\n",
     "\n",
-    "from azure.identity import DefaultAzureCredential, get_bearer_token_provider\n",
+    "# Uncomment if using DefaultAzureCredential below\n",
+    "# from azure.identity import DefaultAzureCredential, get_bearer_token_provider\n",
     "\n",
     "# This is the name of the model deployed, such as 'gpt-4' or 'gpt-3.5-turbo\n",
     "model = os.getenv(\"AZUREAI_CHAT_MODEL\", \"Please set the model\")\n",
@@ -32,10 +33,10 @@
     "api_key=os.getenv(\"AZUREAI_CHAT_KEY\", \"Please set API key\")\n",
     "\n",
     "# Alternatively, we can use Entra authentication\n",
-    "token_provider = get_bearer_token_provider(\n",
-    "     DefaultAzureCredential(),\n",
-    "     \"https://cognitiveservices.azure.com/.default\"\n",
-    ")"
+    "# token_provider = get_bearer_token_provider(\n",
+    "#     DefaultAzureCredential(),\n",
+    "#     \"https://cognitiveservices.azure.com/.default\"\n",
+    "#)"
    ]
   },
   {
@@ -59,9 +60,9 @@
     "    model=model,\n",
     "    azure_endpoint=azure_endpoint,\n",
     "    # For authentication, use either\n",
-    "    #api_key=api_key\n",
+    "    api_key=api_key\n",
     "    # or\n",
-    "    azure_ad_token_provider=token_provider\n",
+    "    # azure_ad_token_provider=token_provider\n",
     ")"
    ]
   },
