Try to slow things down a little

--- a/notebooks/api_examples/models/AzureOpenAI.ipynb
+++ b/notebooks/api_examples/models/AzureOpenAI.ipynb
@@ -13,6 +13,21 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "6b887dab",
+   "metadata": {
+    "tags": [
+     "parameters",
+     "hide-cell"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "call_delay_secs = 0"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "id": "61665201-12a8-4588-bb54-801a367c7535",
    "metadata": {},
@@ -107,6 +122,22 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "da5ea477",
+   "metadata": {
+    "tags": [
+     "hide-cell"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "import time\n",
+    "\n",
+    "time.sleep(call_delay_secs)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "7fa274c5-01c6-46f9-a024-b8b44e16ce2c",
    "metadata": {},
@@ -190,6 +221,20 @@
     "    return lm\n",
     "                   \n",
     "azureai_model + experts(query='What is the meaning of life?')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d5266819",
+   "metadata": {
+    "tags": [
+     "hide-cell"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "time.sleep(call_delay_secs)"
    ]
   }
  ],
