Try a different tag

--- a/notebooks/api_examples/models/AzureOpenAI.ipynb
+++ b/notebooks/api_examples/models/AzureOpenAI.ipynb
@@ -18,7 +18,7 @@
    "metadata": {
     "tags": [
      "parameters",
-     "hide-cell"
+     "remove-cell"
     ]
    },
    "outputs": [],
@@ -127,7 +127,7 @@
    "id": "da5ea477",
    "metadata": {
     "tags": [
-     "hide-cell"
+     "remove-cell"
     ]
    },
    "outputs": [],
@@ -229,7 +229,7 @@
    "id": "d5266819",
    "metadata": {
     "tags": [
-     "hide-cell"
+     "remove-cell"
     ]
    },
    "outputs": [],
