Try hooking next notebook in

--- a/notebooks/art_of_prompt_design/prompt_boundaries_and_token_healing.ipynb
+++ b/notebooks/art_of_prompt_design/prompt_boundaries_and_token_healing.ipynb
@@ -531,7 +531,7 @@
     "from guidance import models, gen\n",
     "\n",
     "# load StableLM from huggingface\n",
-    "lm = models.Transformers(\"stabilityai/stablelm-base-alpha-3b\", device=0)\n",
+    "lm = models.Transformers(\"stabilityai/stablelm-base-alpha-3b\")\n",
     "\n",
     "# With token healing we generate valid URLs, even when the prompt ends with a colon:\n",
     "lm + 'The link is <a href=\"http:' + gen(max_tokens=10)"
