Try another notebook

--- a/notebooks/art_of_prompt_design/use_clear_syntax.ipynb
+++ b/notebooks/art_of_prompt_design/use_clear_syntax.ipynb
@@ -59,11 +59,30 @@
     }
    ],
    "source": [
-    "import guidance\n",
-    "from guidance import models, gen\n",
+    "import math\n",
     "\n",
-    "# we use Mistral for openness, but any model will do (models.Transformers also works)\n",
-    "lm = models.LlamaCpp(\"/home/scottlundberg_google_com/models/mistral-7b-v0.1.Q8_0.gguf\", n_gpu_layers=-1)\n",
+    "from huggingface_hub import hf_hub_download\n",
+    "\n",
+    "import guidance\n",
+    "from guidance import models, gen, select\n",
+    "\n",
+    "repo_id = \"TheBloke/Mistral-7B-Instruct-v0.2-GGUF\"\n",
+    "filename = \"mistral-7b-instruct-v0.2.Q8_0.gguf\"\n",
+    "model_kwargs = {\"verbose\": True, \"n_gpu_layers\": -1}\n",
+    "\n",
+    "downloaded_file = hf_hub_download(repo_id=repo_id, filename=filename)\n",
+    "lm = guidance.models.LlamaCpp(downloaded_file, **model_kwargs)\n",
+    "\n",
+    "# run a guidance program (by appending to the model state)\n",
+    "lm + \"Name common Linux operating system commands.\" + gen(max_tokens=50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "# run a guidance program (by appending to the model state)\n",
     "lm + \"Name common Linux operating system commands.\" + gen(max_tokens=50)"
