--- a/notebooks/tutorials/chat.ipynb
+++ b/notebooks/tutorials/chat.ipynb
@@ -451,7 +451,7 @@
     "    def name(self) -> str:\n",
     "        return self._name\n",
     "    \n",
-    "    def reply(self, interlocutor_reply: str | None = None) -> str:\n",
+    "    def reply(self, interlocutor_reply = None) -> str:\n",
     "        if interlocutor_reply is None:\n",
     "            self._my_turns = []\n",
     "            self._interlocutor_turns = []\n",
