More overlooked typing things

--- a/notebooks/tutorials/chat.ipynb
+++ b/notebooks/tutorials/chat.ipynb
@@ -507,7 +507,7 @@
     "def conversation_simulator(\n",
     "    bot0: ConversationAgent,\n",
     "    bot1: ConversationAgent,\n",
-    "    total_turns: int = 5 )-> list[dict[str,str]]:\n",
+    "    total_turns: int = 5 ):\n",
     "    conversation_turns = []\n",
     "    last_reply = None\n",
     "    for _ in range(total_turns):\n",
