Put in some max_tokens limits

--- a/notebooks/art_of_prompt_design/use_clear_syntax.ipynb
+++ b/notebooks/art_of_prompt_design/use_clear_syntax.ipynb
@@ -351,7 +351,7 @@
     "Here are the 5 most common commands:\n",
     "\"\"\"\n",
     "for i in range(5):\n",
-    "    lm2 += f'''{i+1}. \"{gen('commands', list_append=True, stop='\"')}\"\\n'''"
+    "    lm2 += f'''{i+1}. \"{gen('commands', list_append=True, stop='\"', max_tokens=50)}\"\\n'''"
    ]
   },
   {
@@ -606,7 +606,7 @@
     "lm2 = lm + \"\"\"What are the most common commands used in the Linux operating system?\n",
     "\"\"\"\n",
     "for i in range(10):\n",
-    "    lm2 += f'''- \"{gen('commands', list_append=True, stop='\"', temperature=0.8)}\"\\n'''"
+    "    lm2 += f'''- \"{gen('commands', list_append=True, stop='\"', temperature=0.8, max_tokens=40)}\"\\n'''"
    ]
   },
   {
