Running out of GPU memory?

--- a/notebooks/art_of_prompt_design/use_clear_syntax.ipynb
+++ b/notebooks/art_of_prompt_design/use_clear_syntax.ipynb
@@ -840,6 +840,7 @@
    ],
    "source": [
     "# if we have multple GPUs we can load the chat model on a different GPU with the `device` argument\n",
+    "del lm\n",
     "chat_lm = guidance.models.LlamaCppChat(downloaded_file, **model_kwargs)"
    ]
   },
