[Test] Fix notebooks (#749)
Tweak the notebooks to run in the CI build:
- Remove syntax needing Python >=3.10
- Add configurable delays between GPT-4 calls

Unfortunately, there are still occasional issues, but these seem to be fixed by re-running.

--- a/notebooks/tutorials/chat.ipynb
+++ b/notebooks/tutorials/chat.ipynb
@@ -451,7 +451,7 @@
     "    def name(self) -> str:\n",
     "        return self._name\n",
     "    \n",
-    "    def reply(self, interlocutor_reply: str | None = None) -> str:\n",
+    "    def reply(self, interlocutor_reply = None) -> str:\n",
     "        if interlocutor_reply is None:\n",
     "            self._my_turns = []\n",
     "            self._interlocutor_turns = []\n",
@@ -507,7 +507,7 @@
     "def conversation_simulator(\n",
     "    bot0: ConversationAgent,\n",
     "    bot1: ConversationAgent,\n",
-    "    total_turns: int = 5 )-> list[dict[str,str]]:\n",
+    "    total_turns: int = 5 ):\n",
     "    conversation_turns = []\n",
     "    last_reply = None\n",
     "    for _ in range(total_turns):\n",
