--- a/notebooks/art_of_prompt_design/rag.ipynb
+++ b/notebooks/art_of_prompt_design/rag.ipynb
@@ -26,7 +26,7 @@
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "import guidance\n",
-    "from guidance import models, gen, select, substring, string, prefix_tree, regex, user, assistant, system"
+    "from guidance import models, gen, select, substring, string, regex, user, assistant, system"
    ]
   },
   {
