remove guidance.newline import in favor of explicit specification

--- a/notebooks/art_of_prompt_design/use_clear_syntax.ipynb
+++ b/notebooks/art_of_prompt_design/use_clear_syntax.ipynb
@@ -729,7 +729,7 @@
     }
    ],
    "source": [
-    "from guidance import newline # because for python < 3.12 we can't put a backslash in f-string values\n",
+    "newline = \"\\n\" # because for python < 3.12 we can't put a backslash in f-string values\n",
     "lm2 = lm + 'What are the most common commands used in the Linux operating system?\\n'\n",
     "\n",
     "# generate a bunch of command names\n",
@@ -901,7 +901,8 @@
     }
    ],
    "source": [
-    "from guidance import user, assistant, system, newline\n",
+    "from guidance import user, assistant, system\n",
+    "newline = \"\\n\"\n",
     "\n",
     "with user():\n",
     "    lm2 = chat_lm + \"What are the most common commands used in the Linux operating system?\"\n",
