--- a/notebooks/proverb.ipynb
+++ b/notebooks/proverb.ipynb
@@ -41,7 +41,8 @@
    ],
    "source": [
     "import guidance\n",
-    "from guidance import models, gen, newline\n",
+    "from guidance import models, gen\n",
+    "newline = \"\\n\"\n",
     "\n",
     "# set the default language model used to execute guidance programs\n",
     "gpt3 = models.OpenAI(\"text-davinci-003\")\n",
