Forgot about same model in notebook

--- a/notebooks/anachronism.ipynb
+++ b/notebooks/anachronism.ipynb
@@ -76,7 +76,7 @@
     "target_model_path = os.getenv(\"MODEL_PATH\")\n",
     "print(f\"Attempting to load {target_model_path}\")\n",
     "\n",
-    "lm = guidance.models.LlamaCpp(target_model_path, n_gpu_layers=-1)"
+    "lm = guidance.models.LlamaCpp(target_model_path, n_gpu_layers=-1, n_ctx=4096)"
    ]
   },
   {
