--- a/notebooks/art_of_prompt_design/use_clear_syntax.ipynb
+++ b/notebooks/art_of_prompt_design/use_clear_syntax.ipynb
@@ -153,7 +153,7 @@
     "\n",
     "repo_id = \"TheBloke/Mistral-7B-Instruct-v0.2-GGUF\"\n",
     "filename = \"mistral-7b-instruct-v0.2.Q8_0.gguf\"\n",
-    "model_kwargs = {\"verbose\": True, \"n_gpu_layers\": -1}\n",
+    "model_kwargs = {\"verbose\": True, \"n_gpu_layers\": -1, \"n_ctx\n": 4096}\n",
     "\n",
     "downloaded_file = hf_hub_download(repo_id=repo_id, filename=filename)\n",
     "lm = guidance.models.LlamaCpp(downloaded_file, **model_kwargs)"
