And another notebook

--- a/notebooks/art_of_prompt_design/react.ipynb
+++ b/notebooks/art_of_prompt_design/react.ipynb
@@ -48,7 +48,7 @@
     "\n",
     "repo_id = \"TheBloke/Mistral-7B-Instruct-v0.2-GGUF\"\n",
     "filename = \"mistral-7b-instruct-v0.2.Q8_0.gguf\"\n",
-    "model_kwargs = {\"verbose\": True, \"n_gpu_layers\": -1}\n",
+    "model_kwargs = {\"verbose\": True, \"n_gpu_layers\": -1, \"n_ctx\": 4096}\n",
     "\n",
     "downloaded_file = hf_hub_download(repo_id=repo_id, filename=filename)\n",
     "mistral7 = guidance.models.LlamaCpp(downloaded_file, **model_kwargs)"
