Updating notebooks to match

--- a/notebooks/art_of_prompt_design/use_clear_syntax.ipynb
+++ b/notebooks/art_of_prompt_design/use_clear_syntax.ipynb
@@ -480,8 +480,15 @@
     "# This is the name of the model deployed, such as 'gpt-4' or 'gpt-3.5-turbo\n",
     "model = os.getenv(\"AZUREAI_CHAT_MODEL\", \"Please set the model\")\n",
     "\n",
-    "# This is the deployment URL, as provided in the Azure AI playground ('view code'):\n",
-    "azure_endpoint = os.getenv(\"AZUREAI_CHAT_ENDPOINT\", \"Please set the endpoint\")\n",
+    "# This is the deployment URL, as provided in the Azure AI playground ('view code')\n",
+    "# It will end with 'openai.azure.com'\n",
+    "azure_endpoint = os.getenv(\"AZUREAI_CHAT_BASE_ENDPOINT\", \"Please set the endpoint\")\n",
+    "\n",
+    "# This is the name of the deployment specified in the Azure portal\n",
+    "azure_deployment = os.getenv(\"AZUREAI_CHAT_DEPLOYMENT\", \"Please set the deployment name\")\n",
+    "\n",
+    "# This is the deployed API version, such as 2024-02-15-preview\n",
+    "azure_api_version = os.getenv(\"AZUREAI_CHAT_API_VERSION\", \"Please set the API version\")\n",
     "\n",
     "# The environment variable should be set to the API key from the Azure AI playground:\n",
     "api_key=os.getenv(\"AZUREAI_CHAT_KEY\", \"Please set API key\")\n",
@@ -512,6 +519,8 @@
     "azureai_model = models.AzureOpenAI(\n",
     "    model=model,\n",
     "    azure_endpoint=azure_endpoint,\n",
+    "    azure_deployment=azure_deployment,\n",
+    "    version=azure_api_version,\n",
     "    # For authentication, use either\n",
     "    api_key=api_key\n",
     "    # or\n",
