Missed one update

--- a/notebooks/art_of_prompt_design/use_clear_syntax.ipynb
+++ b/notebooks/art_of_prompt_design/use_clear_syntax.ipynb
@@ -950,6 +950,8 @@
     "azureai_model = models.AzureOpenAI(\n",
     "    model=model,\n",
     "    azure_endpoint=azure_endpoint,\n",
+    "    azure_deployment=azure_deployment,\n",
+    "    version=azure_api_version,\n",
     "    # For authentication, use either\n",
     "    api_key=api_key\n",
     "    # or\n",
