Remove references to separate chat based local models.

--- a/notebooks/art_of_prompt_design/rag.ipynb
+++ b/notebooks/art_of_prompt_design/rag.ipynb
@@ -35,7 +35,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "llama2 = models.LlamaCppChat(\"/home/marcotcr_google_com/work/models/llama-2-13b-chat.Q6_K.gguf\", n_gpu_layers=-1, n_ctx=4096)"
+    "llama2 = models.LlamaCpp(\"/home/marcotcr_google_com/work/models/llama-2-13b-chat.Q6_K.gguf\", n_gpu_layers=-1, n_ctx=4096)"
    ]
   },
   {
