--- a/notebooks/art_of_prompt_design/use_clear_syntax.ipynb
+++ b/notebooks/art_of_prompt_design/use_clear_syntax.ipynb
@@ -877,7 +877,7 @@
     "# if we have multple GPUs we can load the chat model on a different GPU with the `device` argument\n",
     "del lm\n",
     "time.sleep(call_delay_secs)\n",
-    "chat_lm = guidance.models.LlamaCppChat(downloaded_file, **model_kwargs)"
+    "chat_lm = guidance.models.LlamaCpp(downloaded_file, **model_kwargs)"
    ]
   },
   {
