--- a/notebooks/tutorials/adding_new_models.ipynb
+++ b/notebooks/tutorials/adding_new_models.ipynb
@@ -6,6 +6,9 @@
    "source": [
     "# Adding support for a new models\n",
     "\n",
+    "# NOTE: This notebook is now out of date and needs to be rewritten to account for ChatTemplates.\n",
+    "\n",
+    "\n",
     "Different models are tuned with different role prompt formats. If the model you are using is not already a subclass of `guidance.Model`, you can define your own new subclass with whatever role prompt format you want. Then you can use the guidance role tags and they will get translated into the correct prompt format."
    ]
   },
