--- a/notebooks/tutorials/chat.ipynb
+++ b/notebooks/tutorials/chat.ipynb
@@ -72,7 +72,7 @@
    "source": [
     "from guidance import models, gen\n",
     "\n",
-    "azureai_model = models.AzureOpenAIChat(\n",
+    "azureai_model = models.AzureOpenAI(\n",
     "    model=model,\n",
     "    azure_endpoint=azure_endpoint,\n",
     "    azure_deployment=azure_deployment,\n",
