Add max_token to be safe

--- a/notebooks/gpt4_select.ipynb
+++ b/notebooks/gpt4_select.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,16 +31,19 @@
     "def select(azureai_model, choices):\n",
     "    tokenizer = tiktoken.encoding_for_model(model)\n",
     "    encoded_choices = tokenizer.encode_batch(choices)\n",
-    "    encoded_choices = [token for choice in encoded_choices for token in choice]\n",
-    "    logit_bias = {str(token): +98 for token in encoded_choices}\n",
+    "    encoded_choices_tokens = [token for choice in encoded_choices for token in choice]\n",
+    "    logit_bias = {str(token): +98 for token in encoded_choices_tokens}\n",
     "    logit_bias[\"100257\"] = 100  # \"<|endoftext|>\"\n",
     "    azureai_model.set_logit_bias(logit_bias)\n",
+    "\n",
+    "    max_tokens = max(len(choice) for choice in encoded_choices)\n",
+    "    return max_tokens\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -67,18 +70,18 @@
     ")\n",
     "\n",
     "choices = [\"apples\", \"potatos\", \"I don't know\", \"hay\", \"carrots\", \"lettuce\", \"grass\"]\n",
-    "select(azureai_model, choices)\n",
+    "max_tokens = select(azureai_model, choices)\n",
     "\n",
     "with user():\n",
     "    lm = azureai_model + \"Which food does a rabbit prefer?\"\n",
     "\n",
     "with assistant():\n",
-    "    lm += gen(\"response\")\n"
+    "    lm += gen(\"response\", max_tokens=max_tokens)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -105,13 +108,13 @@
     ")\n",
     "\n",
     "choices = [\"beauty\", \"complicated\", \"love\", \"Love\", \"growth\", \"purpose\", \"42\", \"connection\", \"I don't know\"]\n",
-    "select(azureai_model, choices)\n",
+    "max_tokens = select(azureai_model, choices)\n",
     "\n",
     "with user():\n",
     "    lm = azureai_model + \"What is the meaning of life?\"\n",
     "\n",
     "with assistant():\n",
-    "    lm += gen(\"response\")"
+    "    lm += gen(\"response\", max_tokens=max_tokens)"
    ]
   }
  ],
