Try a different way of getting more logs

--- a/notebooks/tutorials/chat.ipynb
+++ b/notebooks/tutorials/chat.ipynb
@@ -12,6 +12,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import logging"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {
     "tags": [
@@ -20,7 +29,17 @@
    },
    "outputs": [],
    "source": [
-    "call_delay_secs = 0"
+    "call_delay_secs = 0\n",
+    "requested_log_level = logging.WARNING"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "logging.basicConfig(level=requested_log_level)"
    ]
   },
   {
