--- a/notebooks/art_of_prompt_design/use_clear_syntax.ipynb
+++ b/notebooks/art_of_prompt_design/use_clear_syntax.ipynb
@@ -479,7 +479,7 @@
     "import time\n",
     "\n",
     "# Uncomment if using DefaultAzureCredential below\n",
-    "# from azure.identity import DefaultAzureCredential, get_bearer_token_provider\n",
+    "from azure.identity import DefaultAzureCredential, get_bearer_token_provider\n",
     "\n",
     "# This is the name of the model deployed, such as 'gpt-4' or 'gpt-3.5-turbo\n",
     "model = os.getenv(\"AZUREAI_CHAT_MODEL\", \"Please set the model\")\n",
@@ -495,13 +495,13 @@
     "azure_api_version = os.getenv(\"AZUREAI_CHAT_API_VERSION\", \"Please set the API version\")\n",
     "\n",
     "# The environment variable should be set to the API key from the Azure AI playground:\n",
-    "api_key=os.getenv(\"AZUREAI_CHAT_KEY\", \"Please set API key\")\n",
+    "# api_key=os.getenv(\"AZUREAI_CHAT_KEY\", \"Please set API key\")\n",
     "\n",
     "# Alternatively, we can use Entra authentication\n",
-    "# token_provider = get_bearer_token_provider(\n",
-    "#     DefaultAzureCredential(),\n",
-    "#     \"https://cognitiveservices.azure.com/.default\"\n",
-    "#)"
+    "token_provider = get_bearer_token_provider(\n",
+    "    DefaultAzureCredential(),\n",
+    "    \"https://cognitiveservices.azure.com/.default\"\n",
+    ")"
    ]
   },
   {
@@ -526,9 +526,9 @@
     "    azure_deployment=azure_deployment,\n",
     "    version=azure_api_version,\n",
     "    # For authentication, use either\n",
-    "    api_key=api_key\n",
+    "    # api_key=api_key\n",
     "    # or\n",
-    "    # azure_ad_token_provider=token_provider\n",
+    "    azure_ad_token_provider=token_provider\n",
     ")"
    ]
   },
@@ -957,9 +957,9 @@
     "    azure_deployment=azure_deployment,\n",
     "    version=azure_api_version,\n",
     "    # For authentication, use either\n",
-    "    api_key=api_key\n",
+    "    # api_key=api_key\n",
     "    # or\n",
-    "    # azure_ad_token_provider=token_provider\n",
+    "    azure_ad_token_provider=token_provider\n",
     ")"
    ]
   },
