--- a/notebooks/art_of_prompt_design/react.ipynb
+++ b/notebooks/art_of_prompt_design/react.ipynb
@@ -85,7 +85,7 @@
     "Example:\n",
     "Question: What is the square root of the age of Brad Pitt?\n",
     "Thought 1: I should find out how old Brad Pitt is.\n",
-    "Action 1: age(\"Brad Pitt\")\n",
+    "Action 1: age(Brad Pitt)\n",
     "Observation 1: 56\n",
     "Thought 2: I should find the square root of 56.\n",
     "Action 2: sqrt(56)\n",
